<resources>
    <string name="new_game">Играть!</string>
    <string name="app_name">FAMCS Student Simulator</string>
    <string name="action_settings">Настройки</string>
    <string name="exit">Выход</string>

    <string name="weekNumber">%dая неделя</string>
    <string name="gameTime">Время: </string>
    <string name="moneyText">Деньги</string>
    <string name="moneyCount">50</string>
    <string name="satiety">Сытость: %s</string>
    <string name="sleep">Здоровье: %s</string>
    <string name="study">Успеваемость: %s</string>
    <string name="work">Работать</string>
    <string name="foodString">Еда</string>

    <string name="newWeek">Прожить неделю!</string>

    <string name="foodHdrTxtView1">Выбери способ подкрепиться!</string>
    <string name="neighbourFood">Брать у соседа</string>
    <string name="doshikFood">Кушать дошик</string>
    <string name="stolovkaFood">Ходить в столовую</string>
    <string name="yourselfFood">Готовить самому</string>
    <string name="fastFood">Кушать фастфуд</string>
    <string name="sushiFood">Кушать суши</string>
    <string name="burgerFood">Покупать бургеры за 2000</string>

    <string name="friendLabel">Выбери, с кем хочешь провести время!</string>
    <string name="hobbyLabel">Скролль, чтобы выбрать занятие по душе!</string>
    <string name="read">почитать книжку</string>
    <string name="dance">танцевать</string>
    <string name="beer">попить пева</string>
    <string name="film">посмотреть фильмец</string>
    <string name="vote">сходить на выборы</string>
    <string name="eurovision">посмотреть Евровидение</string>
    <string name="sport">культурно померяться силами</string>
    <string name="help">помочь кому-нибудь кодить</string>
    <string name="walk">прогуляться по набережной</string>

    <string name="sideJobHeader">Иди работать!</string>
    <string name="workHeader">Работа</string>
    <string name="summerWork">Летняя стажировка</string>

    <string name="flyers">Раздавать флаеры</string>
    <string name="loader">Разгружать вагоны</string>
    <string name="musician">Играть в переходах</string>
    <string name="security">Подменить друга в клубе</string>
    <string name="freelancer">Пофрилансить</string>

    <string name="mcdonalds">МакДак</string>
    <string name="itra">Jtransition</string>
    <string name="yandex">Тындекс</string>

    <string name="facebook">Стажа Хэндбук</string>

    <string name="noVisit">Иногда заглядывать</string>
    <string name="visit">Ходить в университет</string>
    <string name="cheat">Списывать в универе</string>
    <string name="workHard">Вкалывать в универе</string>
    <string name="english">Курсы по английскому</string>
    <string name="itransition">Курсы Jtransition</string>
    <string name="proga">Курсы по проге</string>
    <string name="cookingCourses">Кулинарные курсы</string>
    <string name="shad">shАД</string>
    <string name="epam">Курсы ЕРАТ</string>

    <string name="lostYouth">Выбери, как терять молодость!</string>
    <string name="lostYouthAgain1">У тебя осталась лишняя молодость? </string>
    <string name="lostYouthAgain2">Выбери, где прокачаться! </string>

    <string name="art">Чего кликаешь??? </string>

    <string name="playerName">Имя: неАртём.</string>
    <string name="playerCourseTV">Курс:</string>
    <string name="playerCourseString">1</string>
    <string name="educationalLevel">Уровень образования: %d</string>
    <string name="englishLevel">Уровень английского языка:</string>
    <string name="programmingLevel">Навыки программистера:</string>
    <string name="github_of_project">Github of project!</string>
    <string name="github">https://github.com/KhodorVan/AndroidFamcsSimulator</string>
    <string name="feedback_link">https://forms.gle/ZFj8MharqnsaSf6g7</string>

    <string name="neighbour_action_message">Сосед обнаружил, что вы тырите его еду, и хорошенько вас отмутузил. Ваше здоровье уменьшилось.</string>
    <string name="spisyvanie_action_message">Вас спалили за списыванием. Уровень вашей успеваемости снизился. </string>
    <string name="sushi_bad_message">Вы поели суши и у вас завелись глисты! Ваше здоровье уменьшилось. </string>
    <string name="parents_money_message">Родители прислали вам денег! </string>
    <string name="friend_fastfood_message">Друг угостил вас в фастфуде! </string>
    <string name="classmate_bd_message">У вашего одногруппника День рождения! Надо скинуться на подарок. </string>
    <string name="player_bd_message">У вас День рождения! Все характеристики увеличены! </string>
    <string name="draka_message">Когда вы подменяли друга в клубе, случилась драка! Ваше здоровье уменьшилось. </string>
    <string name="loader_message">Вы сорвали спину, разгружая вагоны! Ваше здоровье уменьшилось. </string>
    <string name="friend_busy_message">Ваш друг был занят! Потому вы развлекались в одиночестве... </string>
    <string name="grant">Пришла стипендия! Время вечеринки с блекджеком и джавой! </string>
    <string name="zero_grant">Вы остались без стипендии. Почему? По кочану! </string>
    <string name="angry_em">Заведующая общаги спалила, что вы НЕ ЗАПЛАТИЛИ ЗА ОБЩЕЖИТИЕ. Скажите спасибо, что живы остались. </string>
    <string name="walk_with_girls">Прогулки с дамами дороговато вам обходятся... </string>
    <string name="sad">Неужели Ефим и Карла вместе??? О нет!</string>
    <string name="bigger_grant">Мммм... Стипендия...</string>

    <string name="handbook">Handbook</string>
    <string name="Jtransition">Jtransition</string>
    <string name="Mak">MCDonald\'s</string>
    <string name="tyndex">Тындекс</string>
    <string name="flaery">Раздавать флаеры</string>
    <string name="vagony">Разгружать вагоны</string>
    <string name="klub">Поохранять клуб</string>
    <string name="perehody">Играть в переходах</string>
    <string name="freelance">Пофрилансить</string>
  
    <string name="notEnoughEnergy">Недостаточно энергии!</string>
    <string name="noMoney">Недостаточно денег!</string>
    <string name="death">СМЭРЦЬ!</string>
    <string name="death_text">Похоже вы не расчитали свои силы и умерли. А ведь мама говорила, что надо было идти в БГУИР. Ну иди теперь в армейку. Кыш-кыш!</string>
    <string name="death_button">Мам, я стану рэпером!</string>
    <string name="studyStage">Этап обучения:</string>
    <string name="nice">Хм...</string>
    <string name="nice_text">Вы долго учились и сильно устали, давайте посмотрим на фоточки Вари!</string>

    <string name="a1">A1</string>
    <string name="a2">A2</string>
    <string name="b1">B1</string>
    <string name="b2">B2</string>
    <string name="c1">C1</string>
    <string name="c2">C2</string>
    <string name="d13">D13</string>

    <string name="semestr">семестр</string>
    <string name="session">сессия</string>
    <string name="holidays">каникулы</string>

    <string name="begginer_prog">Begginer</string>
    <string name="lub_prog">Lubitel</string>
    <string name="jun_prog">Junior</string>
    <string name="mid_prog">Middle</string>
    <string name="senior_prog">Senior</string>
    <string name="lead_prog">Lead</string>
    <string name="gena_prog">Korotkevich</string>
    <string name="shanson">Шансончик, который играет</string>

    <string name="carla">Kарла</string>
    <string name="spilbergsasha">Саша Спилберг</string>
    <string name="star">Стар</string>
    <string name="alone">С собой</string>
    <string name="vitya">Витя</string>
    <string name="zhenya">Женя</string>
    <string name="dragonFly">Ник</string>

    <string name="energyless">Недостаточно энергии</string>
    <string name="programmingless">Недостаточный навык программирования</string>
    <string name="englishless">Недостаточный навык английского</string>
    <string name="cant_stage">Стажировки доступны только на каникулах</string>
    <string name="feedback">Хотите оставить отзыв?..</string>
    <string name="stage_end">Стажировка закончилась. Вы заработали кучу долларов и отправляетесь домой!</string>

    <string name="win">ПОБЕДА</string>
    <string name="winText">Это невероятно! Вы закончили универ и нашли себе хорошую работу! Кажется, вы готовы к взрослой жизни</string>
    <string name="repeatText">Еще раз</string>
    <string name="loose">ПОРАЖЕНИЕ</string>
    <string name="looseText">Вы закончили универ, но так и не нашли себе работу. Ваш красный диплом никому не нужен.</string>
    <string name="repeat2Text">Вот черт. Еще раз</string>
    <string name="loose2">ОТЧИСЛЕНИЕ</string>
    <string name="loose2Textr">Ты завалил сессию и отчислился. Надеюсь, ты хорошо провел время в универе. Теперь тебя ждет армия.</string>
    <string name="repeat2">Перепоступить!</string>

    <string name="universityFail">Вы отчислены!</string>
    <string name="universityFailText">Вы не сдали сессию, и вас отчислили!</string>
    <string name="universityFailButton">Перепоступить!</string>

</resources>
