<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1fcecb"
    tools:context=".ui.fragments.HobbyFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textFriendView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="5dp"
        android:text="@string/friendLabel"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TextView"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="140dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textOtherHobbyView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="5dp"
        android:text="@string/hobbyLabel"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/readButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/read" />

        <Button
            android:id="@+id/danceButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/dance" />

        <Button
            android:id="@+id/beerButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/beer" />

        <Button
            android:id="@+id/filmButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/film" />

        <Button
            android:id="@+id/voteButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/vote" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>