<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.GameLobbyActivity">

    <TextView
        android:id="@+id/moneyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="58dp"
        android:text="@string/moneyText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/gameTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/actualTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/timeTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moneyCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/moneyCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/moneyText"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyText"
        app:layout_constraintVertical_bias="0.473">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/infoButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="20"
            android:src="@drawable/info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/info" />

        <ImageButton
            android:id="@+id/foodButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/infoButton"
            app:srcCompat="@drawable/food_img" />

        <ImageButton
            android:id="@+id/studyButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/foodButton"
            app:srcCompat="@drawable/study_img" />

        <ImageButton
            android:id="@+id/workButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/studyButton"
            app:srcCompat="@drawable/work_img" />

        <ImageButton
            android:id="@+id/hobbyButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/workButton"
            app:srcCompat="@drawable/hobby_img" />
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>